; ModuleID = '/home/carl/AnghaBench/zstd/tests/extr_poolTests.c_testAbruptEnding.c'
source_filename = "/home/carl/AnghaBench/zstd/tests/extr_poolTests.c_testAbruptEnding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @testAbruptEnding to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @testAbruptEnding() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_4__, align 4
  %3 = call i32 @memset(%struct.TYPE_4__* %2, i32 0, i32 4)
  %4 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  %5 = call i32 @ZSTD_pthread_mutex_init(i32* %4, i32* null)
  %6 = call i32 @ASSERT_FALSE(i32 %5)
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @testAbruptEnding_internal(i32 %8)
  store i32 %9, i32* %1, align 4
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  %11 = call i32 @ZSTD_pthread_mutex_destroy(i32* %10)
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @memset(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @ASSERT_FALSE(i32) #1

declare dso_local i32 @ZSTD_pthread_mutex_init(i32*, i32*) #1

declare dso_local i32 @testAbruptEnding_internal(i32) #1

declare dso_local i32 @ZSTD_pthread_mutex_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
